lots of cleanups before release, including checking we don't break CPAN

--- a/dist.ini
+++ b/dist.ini
@@ -60,5 +60,6 @@ version_regexp = ^(\d+\.\d{2})$
 
 [ChangelogFromGit::CPAN::Changes]
 file_name = Changes
+max_age = 1460
 tag_regexp = ^(\d+\.\d{2})$
 
